--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
-pkglib_LTLIBRARIES = libcxxfileno.la
+lib_LTLIBRARIES = libcxxfileno.la
 libcxxfileno_la_SOURCES = fileno.cpp
 pkginclude_HEADERS = fileno.hpp
-
+extra_DIST = libcxxfileno.pc.in
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libcxxfileno.pc
