--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 AC_CONFIG_MACRO_DIR([m4])
 AC_PREREQ([2.69])
-AC_INIT([libcxxfileno], [0.1], [srk31@cl.cam.ac.uk])
+AC_INIT([libc++fileno], [0.1], [srk31@cl.cam.ac.uk])
 LT_INIT
 AC_CONFIG_SRCDIR([fileno.cpp])
 AC_LANG([C++])
@@ -12,4 +12,4 @@ AC_PROG_LN_S
 AC_PROG_INSTALL
 PKG_PROG_PKG_CONFIG
 AC_CHECK_HEADERS([cstdio fstream cerrno iosfwd ext/stdio_filebuf.h ext/stdio_sync_filebuf.h], [], [AC_MSG_FAILURE([required standard headers: cstdio fstream cerrno iosfwd ext/stdio_filebuf.h ext/stdio_sync_filebuf.h])])
-AC_OUTPUT([Makefile libcxxfileno.pc])
+AC_OUTPUT([Makefile libc++fileno.pc])
