Fix names of things in Makefile.am

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,9 +2,9 @@ ACLOCAL_AMFLAGS = -I m4
 lib_LTLIBRARIES = libc++fileno.la
 libc__fileno_la_SOURCES = fileno.cpp
 pkginclude_HEADERS = fileno.hpp
-extra_DIST = libcxxfileno.pc.in
+extra_DIST = libc++fileno.pc.in
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libcxxfileno.pc
+pkgconfig_DATA = libc++fileno.pc
 
 lib/libc++fileno.so: $(lib_LTLIBRARIES)
 	mkdir -p lib && cd lib && ln -sf ../src/.libs/libc++fileno.so .
